syntax = 'proto3';

package port;

service PortDomainService {
  rpc AddPort(Port) returns (AddPortResponse) {}
  rpc GetPort(PortID) returns (GetPortResponse) {}
}

message Port {
  string id = 1;
  string name = 2;
  float lat = 3;
  float long = 4;
  string country = 5;
  string province = 6;
  string city = 7;
  string timezone = 8;
  string code = 9;
  repeated string alias = 10;
  repeated string region = 11;
  repeated string unlocs = 12;
}

message AddPortResponse {
}

message GetPortResponse {
  Port port = 1;
}

message PortID {
  string id = 1;
}
